Add configuration file for uber-build